@@ -1,3 +1,7 @@
+* Tue Jun 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.3-0
+- Fix Puppet 6 support in the compliance_map function
+- Dropped Puppet 4 support
+
 * Tue Mar 12 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.2-0
 - Fix bug in Array merging
 
